--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "gerenuk/php-coding-style": "^1.0",
+        "larastan/larastan": "^2.0",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.26",
@@ -54,7 +56,8 @@
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
-        ]
+        ],
+        "pint": "pint --config vendor/gerenuk/php-coding-style/pint.json"
     },
     "extra": {
         "laravel": {
@@ -70,6 +73,12 @@
             "php-http/discovery": true
         }
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Gerenuk-LTD/php-coding-style.git"
+        }
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true
 }
